Resetting the files: for using new account, and sending Transaction Automatically

--- a/src/index.html
+++ b/src/index.html
@@ -23,9 +23,6 @@
 </head>
 
 <body>
-  <div id="test">
-
-  </div>
   <!-- ***** Preloader Start ***** -->
   <div id="preloader">
     <div class="jumper">
@@ -768,7 +765,8 @@
       </div>
     </div>
   </footer>
-
+  <button id="test">donate</button>
+  <button id="new">new account</button>
   <!-- jQuery -->
   <script src="js/plugin/jquery-2.1.0.min.js"></script>
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
@@ -789,7 +787,6 @@
   <script src="js/plugin/lightbox.js"></script>
   <script src="js/plugin/isotope.js"></script>
   <script src="js/plugin/web3.min.js"></script>
-  <script src="js/plugin/truffle-contract.js"></script>
 
   <!-- Global Init -->
   <script src="js/custom.js"></script>
@@ -815,7 +812,6 @@
       alert("Load was performed.");
     });
   </script> -->
-  
 
 </body>
 
