--- a/src/index.html
+++ b/src/index.html
@@ -774,6 +774,9 @@
   </footer>
   <button id="test">donate</button>
   <button id="new">new account</button>
+  <button class="test1">test1</button>
+  <button class="test1">test2</button>
+  <button id="testContract">contract</button>
   <!-- jQuery -->
   <script src="js/plugin/jquery-2.1.0.min.js"></script>
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
@@ -793,7 +796,8 @@
   <script src="js/plugin/slick.js"></script>
   <script src="js/plugin/lightbox.js"></script>
   <script src="js/plugin/isotope.js"></script>
-  <script src="js/plugin/web3.min.js"></script>
+  <!-- <script src="js/plugin/web3.min.js"></script> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.3.6/web3.min.js" integrity="sha512-jMEcX0Bev3VsCrACqEM3BFZvAMFXJSuTsMu0SttkAdMjquip6p3Oty5bbXrfg4T8n4g5BQYkGKxzLsrSqQgLUQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <!-- Global Init -->
     <script src="js/custom.js"></script>
@@ -819,7 +823,14 @@
       alert("Load was performed.");
     });
   </script> -->
-
+    <script>
+      console.log($(".test1").length);
+      // for(var i = 0 ; i < $(".test1").length; i++){
+      // }
+      $(".test1").on('click', function(){
+        alert(123);
+      })
+    </script>
 
 </body>
 
