Setting Front Ends - donate and create fundraiser

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
                             <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
-                            <li class="scroll-to-section"><a href="#about">About</a></li>
+                            <li class="scroll-to-section"><a href="#about">FindTx</a></li>
 
                             <!-- 
                           <li class="submenu">
@@ -58,8 +58,8 @@
                               </ul>
                           </li>
                       -->
-                            <li class="scroll-to-section"><a href="#menu">Menu</a></li>
-                            <li class="scroll-to-section"><a href="#chefs">Chefs</a></li>
+                            <li class="scroll-to-section"><a href="#menu">History</a></li>
+                            <li class="scroll-to-section"><a href="#fundraisers">Fundraisers</a></li>
                             <li class="submenu">
                                 <a href="javascript:;">Features</a>
                                 <ul>
@@ -70,7 +70,7 @@
                                 </ul>
                             </li>
                             <!-- <li class=""><a rel="sponsored" href="https://templatemo.com" target="_blank">External URL</a></li> -->
-                            <li class="scroll-to-section"><a href="#reservation">Contact Us</a></li>
+                            <li class="scroll-to-section"><a href="#reservation">Share Hope</a></li>
                         </ul>
                         <a class='menu-trigger'>
                             <span>Menu</span>
@@ -90,10 +90,10 @@
                 <div class="col-lg-4">
                     <div class="left-content">
                         <div class="inner-content">
-                            <h4>KlassyCafe</h4>
+                            <h4>Do!Nation</h4>
                             <h6>THE BEST EXPERIENCE</h6>
                             <div class="main-white-button scroll-to-section">
-                                <a href="#reservation">Make A Reservation</a>
+                                <a href="#reservation">Share The Hope</a>
                             </div>
                         </div>
                     </div>
@@ -293,7 +293,7 @@
                 <div class="col-lg-4 offset-lg-4 text-center">
                     <div class="section-heading">
                         <h6>Our fundraiser</h6>
-                        <h2>We offer the best ingredients for you</h2>
+                        <h2>We offer the best Delightness for you</h2>
                     </div>
                 </div>
             </div>
@@ -303,9 +303,7 @@
                         <div class="thumb">
                             <div class="overlay"></div>
                             <ul class="social-icons">
-                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                                <li><a class="do-donation"><i class="fa fa-heart"></i></a></li>
                             </ul>
                             <img src="images/daeyoung-1.jpg" alt="fundraiser #1">
                         </div>
@@ -320,9 +318,7 @@
                         <div class="thumb">
                             <div class="overlay"></div>
                             <ul class="social-icons">
-                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-behance"></i></a></li>
+                                <li><a class="do-donation"><i class="fa fa-heart"></i></a></li>
                             </ul>
                             <img src="images/daeyoung-2.jpg" alt="fundraiser #2">
                         </div>
@@ -337,11 +333,9 @@
                         <div class="thumb">
                             <div class="overlay"></div>
                             <ul class="social-icons">
-                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-google"></i></a></li>
+                                <li><a class="do-donation"><i class="fa fa-heart"></i></a></li>
                             </ul>
-                            <img src="images/daeyoung-3.jpg" alt="Chef #3">
+                            <img src="images/daeyoung-3.jpg" alt="Fundraiser #3">
                         </div>
                         <div class="down-content">
                             <h4>NO.33</h4>
@@ -361,16 +355,16 @@
                 <div class="col-lg-6 align-self-center">
                     <div class="left-text-content">
                         <div class="section-heading">
-                            <h6>Contact Us</h6>
-                            <h2>Here You Can Make A Reservation Or Just walkin to our cafe</h2>
+                            <h6>Who Needs Help?</h6>
+                            <h2>Here You Can Make An Opportunity To Be One..</h2>
                         </div>
-                        <p>Donec pretium est orci, non vulputate arcu hendrerit a. Fusce a eleifend riqsie, namei sollicitudin urna diam, sed commodo purus porta ut.</p>
+                        <p>Please, write the organization name and the infos for your fundraiser</p>
                         <div class="row">
                             <div class="col-lg-6">
                                 <div class="phone">
-                                    <i class="fa fa-phone"></i>
-                                    <h4>Phone Numbers</h4>
-                                    <span><a href="#">080-090-0990</a><br><a href="#">080-090-0880</a></span>
+                                    <i class="fa fa-user"></i>
+                                    <h4>Developers</h4>
+                                    <span><a href="#">J.K.W</a><br><a href="#">K.M.S</a><br><a href="#">K.D.Y</a><br><a href="#">M.S.I</a></span>
                                 </div>
                             </div>
                             <div class="col-lg-6">
@@ -385,19 +379,19 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="contact-form">
-                        <form id="contact" action="" method="post">
+                        <form id="contact" >
                             <div class="row">
                                 <div class="col-lg-12">
-                                    <h4>Table Reservation</h4>
+                                    <h4>Fundraiser</h4>
                                 </div>
                                 <div class="col-lg-6 col-sm-12">
                                     <fieldset>
-                                        <input name="name" type="text" id="name" placeholder="Your Name*" required="">
+                                        <input name="name" type="text" id="name" placeholder="Fundraiser Name*" required="">
                                     </fieldset>
                                 </div>
                                 <div class="col-lg-6 col-sm-12">
                                     <fieldset>
-                                        <input name="email" type="text" id="email" pattern="[^ @]*@[^ @]*" placeholder="Your Email Address" required="">
+                                        <input name="email" type="text" id="email" pattern="[^ @]*@[^ @]*" placeholder="Orgnaization Email Address" required="">
                                     </fieldset>
                                 </div>
                                 <div class="col-lg-6 col-sm-12">
@@ -407,21 +401,7 @@
                                 </div>
                                 <div class="col-md-6 col-sm-12">
                                     <fieldset>
-                                        <select value="number-guests" name="number-guests" id="number-guests">
-                      <option value="number-guests">Number Of Guests</option>
-                      <option name="1" id="1">1</option>
-                      <option name="2" id="2">2</option>
-                      <option name="3" id="3">3</option>
-                      <option name="4" id="4">4</option>
-                      <option name="5" id="5">5</option>
-                      <option name="6" id="6">6</option>
-                      <option name="7" id="7">7</option>
-                      <option name="8" id="8">8</option>
-                      <option name="9" id="9">9</option>
-                      <option name="10" id="10">10</option>
-                      <option name="11" id="11">11</option>
-                      <option name="12" id="12">12</option>
-                    </select>
+                                        <input name="target-amount" type="number" id="target-amount" placeholder="Target Amount(ether)*" required="">
                                     </fieldset>
                                 </div>
                                 <div class="col-lg-6">
@@ -436,22 +416,23 @@
                                 </div>
                                 <div class="col-md-6 col-sm-12">
                                     <fieldset>
-                                        <select value="time" name="time" id="time">
-                      <option value="time">Time</option>
-                      <option name="Breakfast" id="Breakfast">Breakfast</option>
-                      <option name="Lunch" id="Lunch">Lunch</option>
-                      <option name="Dinner" id="Dinner">Dinner</option>
-                    </select>
+                                        <select value="category" name="category" id="category">
+                                            <option value="category">Category</option>
+                                            <option name="Animal" id="Animal">Animal</option>
+                                            <option name="Children" id="Children">Children</option>
+                                            <option name="Nature" id="Nature">Nature</option>
+                                            <option name="Elders" id="Elders">Elders</option>
+                                            </select>
                                     </fieldset>
                                 </div>
                                 <div class="col-lg-12">
                                     <fieldset>
-                                        <textarea name="message" rows="6" id="message" placeholder="Message" required=""></textarea>
+                                        <textarea name="message" rows="6" id="message" placeholder="Message, Please give us the detail infos" required=""></textarea>
                                     </fieldset>
                                 </div>
                                 <div class="col-lg-12">
                                     <fieldset>
-                                        <button type="submit" id="form-submit" class="main-button-icon">Make A Reservation</button>
+                                        <button id="submit-fundraiser" class="main-button-icon">Share The Hope</button>
                                     </fieldset>
                                 </div>
                             </div>
@@ -735,7 +716,7 @@
             </div>
         </div>
     </section>
-    <!-- ***** Chefs Area Ends ***** -->
+    <!-- ***** Fundraisers Area Ends ***** -->
 
     <!-- ***** Footer Start ***** -->
     <footer>
