--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
-                            <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
+                            <li class="scroll-to-section"><a href="#top" class="active" id="account"></a></li>
                             <li class="scroll-to-section"><a href="#about">FindTx</a></li>
 
                             <!-- 
@@ -61,12 +61,8 @@
                             <li class="scroll-to-section"><a href="#menu">History</a></li>
                             <li class="scroll-to-section"><a href="#fundraisers">Fundraisers</a></li>
                             <li class="submenu">
-                                <a href="javascript:;">Features</a>
-                                <ul>
-                                    <li><a href="#">Features Page 1</a></li>
-                                    <li><a href="#">Features Page 2</a></li>
-                                    <li><a href="#">Features Page 3</a></li>
-                                    <li><a href="#">Features Page 4</a></li>
+                                <a href="javascript:;">Do'Accounts</a>
+                                <ul id="assign-account">
                                 </ul>
                             </li>
                             <!-- <li class=""><a rel="sponsored" href="https://templatemo.com" target="_blank">External URL</a></li> -->
@@ -91,7 +87,7 @@
                     <div class="left-content">
                         <div class="inner-content">
                             <h4>Do!Nation</h4>
-                            <h6>THE BEST EXPERIENCE</h6>
+                            <h6 id="my-account">My Account: </h6>
                             <div class="main-white-button scroll-to-section">
                                 <a href="#reservation">Share The Hope</a>
                             </div>
@@ -303,13 +299,14 @@
                         <div class="thumb">
                             <div class="overlay"></div>
                             <ul class="social-icons">
-                                <li><a class="do-donation"><i class="fa fa-heart"></i></a></li>
+                                <li><a id="1" class="do-donation"><i class="fa fa-heart"></i></a></li>
                             </ul>
                             <img src="images/daeyoung-1.jpg" alt="fundraiser #1">
                         </div>
                         <div class="down-content">
                             <h4>NO.1</h4>
                             <span>Fundraiser</span>
+                            <span id="1-fundraiser" hidden>0x42AE8ac9A9d74272Fef45f793193E92B4CFaca6A</span>
                         </div>
                     </div>
                 </div>
