--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
                     <nav class="main-nav">
                         <!-- ***** Logo Start ***** -->
                         <a href="index.html" class="logo">
-                            <img src="images/klassy-logo.png" align="klassy cafe html template">
+                            <img src="images/daeyoungLogo01.jpg" align="klassy cafe html template">
                         </a>
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
@@ -153,8 +153,8 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="section-heading">
-                        <h6>Our Menu</h6>
-                        <h2>Our selection of cakes with quality taste</h2>
+                        <h6>Our Donation</h6>
+                        <h2>Real-time donation status</h2>
                     </div>
                 </div>
             </div>
@@ -704,23 +704,23 @@
                 <div class="col-lg-4 col-xs-12">
                     <div class="right-text-content">
                         <ul class="social-icons">
-                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                            <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                            <li><a href="#"><i class="fa fa-bitcoin"></i></a></li>
+                            <li><a href="#"><i class="fa fa-chain"></i></a></li>
+                            <li><a href="#"><i class="fa fa-dollar"></i></a></li>
+                            <li><a href="#"><i class="fa fa-money"></i></a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="logo">
-                        <a href="index.html"><img src="images/white-logo.png" alt=""></a>
+                        <a href="index.html"><img src="images/daeyoungLogo02.png" alt=""></a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-xs-12">
                     <div class="left-text-content">
-                        <p>© Copyright Klassy Cafe Co.
-
-                            <br>Design: TemplateMo
+                        <br>© fnEduino blockchain course group1.
+                        <br>Kang Min-song &nbsp Jeon Kwan-woo
+                        <br>Kim Dae-young &nbsp Mo Sang-il
                         </p>
                     </div>
                 </div>
